making buttons match background

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Application</title>
+    <link href="https://fonts.googleapis.com/css?family=Limelight|Yanone+Kaffeesatz" rel="stylesheet">
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
